[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.env
    | build
    | dist
  )/
)
'''


[tool.isort]
profile = 'black'


[tool.pytest.ini_options]
python_files = ['tests.py']
