[metadata]
name = importfixer
version = 0.1a1
description = Program to fix imports from a configuration defintion
long_description = file: README.md
keywords = import, fixer
license = MIT
author = Brian Young
url = https://github.com/btyoung/importfixer
classifiers =
  Topic :: Software Development

[options]
py_modules = importfixer
python_requires >= 3.8, <4
install_requires =
  pyflakes >= 2.4

[options.entry_points]
console_scripts = 
  importfixer = importfixer:main
